threetier_kube/backend/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-app
          image: reddychaithanya06/backend-helm:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-volume
              mountPath: /opt/config
            - name: secret-volume
              mountPath: /etc/secrets
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: backendconfig
        - name: secret-volume
          secret:
            secretName : backendsecret


#          env:
#            - name: DB_HOST
#              valueFrom:
#                configMapKeyRef:
#                  name: backendconfig
#                  key: db_HOST
#            - name: DB_PORT
#              valueFrom:
#                configMapKeyRef:
#                  name: backendconfig
#                  key: db_PORT
#            - name: DB_NAME
#              valueFrom:
#                configMapKeyRef:
#                  name: backendconfig
#                  key: db_NAME
#            - name: DB_USER
#              valueFrom:
#                configMapKeyRef:
#                  name: backendconfig
#                  key: db_USER
#            - name: DB_PASSWORD
#              valueFrom:
#                SecretKeyRef:
#                  name: backendsecret
#                  key: DB_PASSWORD




#          env:
#            - name: DB_HOST
#              value: "postgres-service"      # Should match the postgres service name
#            - name: DB_PORT
#              value: "5432"
#            - name: DB_NAME
#              value: "cruddb"
#            - name: DB_USER
#              value: "cruduser"
#            - name: DB_PASSWORD
#              value: "password"
