threetier_kube/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: exam.com
    http:
      paths:
      - path: /backend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 5000
#      - path: /frontend(/|$)(.*)
#        pathType: ImplementationSpecific
#        backend:
#          service:
#            name: frontend-service
#            port:
#              number: 80
