threetier_kube/backend/backend-ingressonly.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingressonly
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: exam.com
    http:
      paths:
      - path: /backendonly(/|$)(.*)
        pathType: ImplementationSpecific
#      - path: /backend/api
#        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
#      - path: /frontend(/|$)(.*)
#        pathType: ImplementationSpecific
#        backend:
#          service:
#            name: frontend-service
#            port:
#              number: 80
